--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,18 @@
 # use your site url and comment adding # to the orther
 # ddev
-DRUPAL_AUTH_URI=http://drupal-decoupled.ddev.site
+NEXT_PUBLIC_DRUPAL_AUTH_URI=https://ai-labs-drupal.ddev.site
 # lando
 # DRUPAL_AUTH_URI=http://drupal-decoupled.lndo.site
 
 # You can use the previously generated `DRUPAL_CLIENT_ID` and `DRUPAL_CLIENT_SECRET` values shown on the CLI or as a warning message.
 # You can reuse the previously generated Consumers at the site by visiting `admin/config/services/consumer` to edit the consumers labeled as `Viewer` & `Previewer` and assigning them a new secret value.
 # For this demo use the one with the scope Previewer
-DRUPAL_CLIENT_ID=
-DRUPAL_CLIENT_SECRET=
+NEXT_PUBLIC_DRUPAL_CLIENT_ID=
+NEXT_PUBLIC_DRUPAL_CLIENT_SECRET=
 
 # use your site url and comment adding # to the orther
 # ddev
-DRUPAL_GRAPHQL_URI=http://drupal-decoupled.ddev.site/graphql
+NEXT_PUBLIC_DRUPAL_GRAPHQL_URI=https://ai-labs-drupal.ddev.site/graphql
 # lando
 # DRUPAL_GRAPHQL_URI=http://drupal-decoupled.lndo.site/graphql
 
