--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "drupal-auth-client": "^0.4",
     "drupal-decoupled": "^0.1",
     "drupal-visual-editor": "^0.2",
+    "framer-motion": "^12.9.2",
     "gql.tada": "^1.8.7",
     "lucide-react": "^0.479.0",
     "next": "14.2.8",
@@ -36,6 +37,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
+    "react-intersection-observer": "^9.16.0",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
