--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "build": "next build",
-    "dev": "next dev --port 8080",
+    "dev": "next dev",
     "gql:sync": "npx tsx scripts/sync.ts",
     "lint": "next lint",
     "start": "next start",
